<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/dlg_login_title" />
    </LinearLayout>

    <LinearLayout
        style="@style/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            style="@style/textview_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_login_nick" />

        <EditText
            android:id="@+id/dlg_login_nick"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            style="@style/textview_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_login_host" />

        <EditText
            android:id="@+id/dlg_login_host"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            style="@style/textview_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_login_port" />

        <EditText
            android:id="@+id/dlg_login_port"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLength="5"
            android:numeric="integer" />
    </LinearLayout>

    <LinearLayout
        style="@style/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/dlg_login_cancel"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dlg_login_cancel" />

        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/dlg_login_login"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dlg_login_login" />

        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" />
    </LinearLayout>

</LinearLayout>